arregle box del socio y acomode nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -39,41 +39,41 @@
             <h2>Comisión Directiva</h2>
         </div>
         <div class="galeria-gird">
-            <div class="imagen-contenedor">
-                <img src="../imagenes/Nicosantos.png" alt="Nico" class="foto-int"><p>Nicolas Santo - Presidente</p>
+            <div class="imagen-contenedor1">
+                <img src="../imagenes/Nicosantos.png" alt="Nico" class="foto-int"><p class="text-p">Nicolas Santo - Presidente</p>
             </div>
-            <div class="imagen-contenedor">
-                <img src="../imagenes/juanpele.png" alt="juan"class="foto-int"><p>Juan Pellegrini - Vice-presidente</p>
+            <div class="imagen-contenedor2">
+                <img src="../imagenes/juanpele.png" alt="juan"class="foto-int"><p class="text-p">Juan Pellegrini - Vice-presidente</p>
             </div>
-            <div class="imagen-contenedor">
-                <img src="../imagenes/manuela.png" alt="manu"class="foto-int"><p>Manuela Gomez - Secretaria</p>
+            <div class="imagen-contenedor1">
+                <img src="../imagenes/manuela.png" alt="manu"class="foto-int"><p class="text-p">Manuela Gomez - Secretaria</p>
             </div>
-            <div class="imagen-contenedor">
-                <img src="../imagenes/julisant.png" alt="julian"class="foto-int"><p>Julian Santo - Tesorero</p>
+            <div class="imagen-contenedor2">
+                <img src="../imagenes/julisant.png" alt="julian"class="foto-int"><p class="text-p">Julian Santo - Tesorero</p>
             </div> 
-            <div class="imagen-contenedor">
-                <img src="../imagenes/magui.png" alt="magui"class="foto-int"><p>Magui Vergara - Revisora de cuentas</p>
+            <div class="imagen-contenedor1">
+                <img src="../imagenes/magui.png" alt="magui"class="foto-int"><p class="text-p">Magui Vergara - Revisora de cuentas</p>
             </div>    
-            <div class="imagen-contenedor">
-                <img src="../imagenes/agupeleg.png" alt="agu"class="foto-int"><p>Agustin Pellegrini - Vocal</p>
+            <div class="imagen-contenedor2">
+                <img src="../imagenes/agupeleg.png" alt="agu"class="foto-int"><p class="text-p">Agustin Pellegrini - Vocal</p>
             </div>    
-            <div class="imagen-contenedor">
-                <img src="../imagenes/mica.png" alt="mica"class="foto-int"><p>Micaela Martinez - Vocal</p> 
+            <div class="imagen-contenedor1">
+                <img src="../imagenes/mica.png" alt="mica"class="foto-int"><p class="text-p">Micaela Martinez - Vocal</p> 
             </div>    
-            <div class="imagen-contenedor">
-                <img src="../imagenes/soria.png" alt="nahu"class="foto-int"><p>Nahuel Soria - Vocal</p>
+            <div class="imagen-contenedor2">
+                <img src="../imagenes/soria.png" alt="nahu"class="foto-int"><p class="text-p">Nahuel Soria - Vocal</p>
             </div>    
-            <div class="imagen-contenedor">
-                <img src="../imagenes/zarate.png" alt="chiqui"class="foto-int">Nicolas Zarate - Vocal<p></p>
+            <div class="imagen-contenedor1">
+                <img src="../imagenes/zarate.png" alt="chiqui"class="foto-int"><p class="text-p">Nicolas Zarate - Vocal</p>
             </div>
-            <div class="imagen-contenedor">    
-                <img src="../imagenes/ozz.png" alt="ozz"class="foto-int">Osvaldo Zarza - Vocal<p></p>
+            <div class="imagen-contenedor2">    
+                <img src="../imagenes/ozz.png" alt="ozz"class="foto-int"><p class="text-p">Osvaldo Zarza - Vocal</p>
             </div>    
-            <div class="imagen-contenedor">
-                <img src="../imagenes/juancnun.png" alt="juancnun"class="foto-int"><p>Juan Cruz Nuñez - Vocal</p>
+            <div class="imagen-contenedor1">
+                <img src="../imagenes/juancnun.png" alt="juancnun"class="foto-int"><p class="text-p">Juan Cruz Nuñez - Vocal</p>
             </div>    
-            <div class="imagen-contenedor">
-                <img src="../imagenes/curti.png" alt="marti"class="foto-int"><p>Martina Cruti - Vocal</p>
+            <div class="imagen-contenedor2">
+                <img src="../imagenes/curti.png" alt="marti"class="foto-int"><p class="text-p">Martina Cruti - Vocal</p>
             </div>
         </div>
     </main>
